# DPU_benchmark_bf3

./: .gitignore  ReadMe.txt
DOCA/: bf_dma_initiator.c  bf_import_mmap.c  bluefield_cc_server_dma.c  bluefield_comm_channel_initiator.c  bluefield_tcp_dma.c  bluefield_tcp_initiator.c  capability_discovery.c  device_discovery.c  device_open.c  dma_context_lifecycle.c  hello_dpu.c  mmap_buf_inventory.c  progress_engine.c  where_am_i.c
DOCA/DOCA_host/: host_cc_client_exporter.c  host_comm_channel_responder.c  host_dma_responder.c  host_export_mmap.c  host_tcp_export_blob.c
Data/: README.md  mat_to_txt.py  wkt_preprocessor_clean.py
Documents/: Geospatial_Operations_Performance_of_DPUs_poster.pptx  benchmark_experimental_results.numbers  createIdAndMBR.cpp  geospatial_analytics_experiments.pptx  geospatial_analytics_project_description.pptx  jsonToWKT.py
bluefield_spatial_operator/: README.md
bluefield_spatial_operator/cmake/: CMakeLists.txt
bluefield_spatial_operator/experiments/: spatial_filter_server.cc
bluefield_spatial_operator/protos/: bluefield_spatial.proto
derda_grpc/: CMakeLists.txt  README.md
derda_grpc/cmake/: CMakeLists.txt
derda_grpc/experiments/: exp1_blocking_rtree.cc  exp1_non_blocking_rtree.cc  exp2_multiple_query_multiple_thread_floating_point_client.cc  exp2_multiple_query_multiple_thread_floating_point_dpu.cc  exp2_multiple_query_multiple_thread_floating_point_server.cc  exp3_multiple_query_multiple_thread_client.cc  exp3_multiple_query_multiple_thread_server.cc  exp4_multiple_query_client.cc  exp4_multiple_query_dpu.cc  geosbm_client.cc  (+16 more)
gRPC server-client example/: clientmain.cpp  servermain.cpp
mpi/: geos_benchmark  geos_benchmark.cpp  geos_benchmark_mpi  geos_benchmark_mpi.cpp  geos_benchmark_mpi_file_partition.cpp  geos_benchmark_mpi_spatial_partition  geos_benchmark_mpi_spatial_partition.cpp  geos_dnm.cpp  geos_sample.cpp  geosbm.cpp  geosbm_backup.cpp  geosbm_backup2.cpp  geosbm_mpi.cpp  geosbm_mpi_backup.cpp  geosbm_mpi_fp.cpp  geosbm_mpi_sp.cpp  geostest.c  geostest2.c  geostest2_backup.c  getMBRs.cpp  mpi.slurm  mpi_arm.slurm  mpi_arm_fp.slurm  mpi_arm_mn.slurm  mpi_arm_old.slurm  mpi_x86.slurm  mpi_x86_fp.slurm  mpi_x86_mn.slurm  scalability_benchmarks_1reps.sh  scalability_benchmarks_2reps.sh  scalability_benchmarks_4reps.sh
nathan_grpc_test/: CMakeLists.txt
tutorial_grpc_test/: README.md
vector_similarity_test/: .gitignore  IVFPQ_re_run  README.md  RESULTS_JSON_STRUCTURE_GUIDE.txt  bf3host_log.txt  bf3host_log_k1.txt  bf3host_log_k10.txt  bf3host_log_k100_multi.txt  build_indexes.py  build_suite.sh  build_suite100M.sh  combined_suite.sh  device_utils.py  graph_recall_vs_k.py  graph_recall_vs_k_fasttext.py  graph_recall_vs_k_glove.py  graph_recall_vs_speed.py  graph_recall_vs_speed_glove.py  graph_results.py  grapher.py  index_builder.py  index_searcher.py  mem_utils.py  multi_index_test.py  multitest_suite.sh  search_suite.sh  thread_scaling  update_ground_truth.sh
(+101 files in other folders)
